--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"discord.js": "^14.15.3",
 		"dotenv": "^16.4.5",
+		"file-system-cache": "^2.4.4",
 		"mongoose": "^8.4.1"
 	}
 }
