--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"discord.js": "^14.15.3",
 		"dotenv": "^16.4.5",
 		"file-system-cache": "^2.4.4",
+		"moment-timezone": "^0.5.45",
 		"mongoose": "^8.4.1"
 	}
 }
