--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@eslint/js": "^9.4.0",
+		"@types/figlet": "^1.5.8",
 		"@types/node": "^20.14.2",
 		"eslint": "^9.4.0",
 		"globals": "^15.4.0",
@@ -32,6 +33,7 @@
 	"dependencies": {
 		"discord.js": "^14.15.3",
 		"dotenv": "^16.4.5",
+		"figlet": "^1.7.0",
 		"file-system-cache": "^2.4.4",
 		"moment-timezone": "^0.5.45",
 		"mongoose": "^8.4.1"
