--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.4.0",
 		"@types/figlet": "^1.5.8",
+		"@types/he": "^1.2.3",
 		"@types/node": "^20.14.2",
 		"eslint": "^9.4.0",
 		"globals": "^15.4.0",
@@ -36,6 +37,7 @@
 		"dotenv": "^16.4.5",
 		"figlet": "^1.7.0",
 		"file-system-cache": "^2.4.4",
+		"he": "^1.2.0",
 		"moment-timezone": "^0.5.45",
 		"mongoose": "^8.4.1"
 	}
