--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"register": "tsx src/deploy-commands.ts",
 		"dev": "tsx watch src/index.ts",
 		"build": "tsc",
+		"test": "jest",
 		"start": "node build/deploy-commands.js && node ."
 	},
 	"keywords": [
@@ -25,9 +26,12 @@
 		"@eslint/js": "^9.4.0",
 		"@types/figlet": "^1.5.8",
 		"@types/he": "^1.2.3",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.14.2",
 		"eslint": "^9.4.0",
 		"globals": "^15.4.0",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.1.5",
 		"tsx": "^4.15.2",
 		"typescript": "^5.4.5",
 		"typescript-eslint": "^7.13.0"
